--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "<h3>Part B</h3>\n",
     "<ol>\n",
-    "    <li>Determining the amount a indivdual makes. The response would be the income amount of a person. The Predictor would be credit history, payement, debt, assets. Goal would probably be more along the lines of inference because observing changes in the predictors might lead into insights as how much money an indivdual makes.</li>\n",
+    "    <li>Determining the amount a indivdual makes. The response would be the income amount of a person. The Predictor would be credit history, payment, debt, assets. Goal would probably be more along the lines of inference because observing changes in the predictors might lead into insights as how much money an indivdual makes.</li>\n",
     "    <li>Determing the amount of rain fall in a region. The response would the amount of rain and predictors could be time, amount of overcast, precipitation. The goal is prediction; the reason inference is probably not needed is because the relationships have probably already been uncovered.</li>\n",
     "    <li>Determining the change in stock market. The Response would the amount the market increases or decreases. The Predictors could be currency rate changes, consumer sentiment, etc. This is a predicton goal.</li>\n",
     "</ol> "
@@ -71,7 +71,7 @@
    "source": [
     "<h3>Part C</h3>\n",
     "<ol>\n",
-    "    <li>Using cluster analysis to looking at build of blood cells could be used to identitify blood clothes.</li>\n",
+    "    <li>Using cluster analysis to looking at build of blood cells could be used to identitify blood clots.</li>\n",
     "    <li>Cluster analysis could be used to find vehicle built-ups which could be useful in planning highways and extra roadlanes in certain areas.</li>\n",
     "    <li>In a war zone, population clusters could be used by peacekeeping forcing to set up safe zones for refugees. Using cluster analysis could effectively identitify clusters.</li>\n",
     "</ol> "
@@ -212,7 +212,8 @@
    "source": [
     "The quantitative predictors: mpg, displacement, horsepower, weight, and acceleration. \n",
     "\n",
-    "The qualitative predictors: cylinders, year, origin, and name."
+    "The qualitative predictors: cylinders, year, origin, and name.\n",
+    "While cylinders and year are numeric, they are best described at categorical; therefore, they would be qualitative."
    ]
   },
   {
